Implemented JoinSession, UpdateSession endpoints.
